--- a/charts/app/templates/serviceaccount.yaml
+++ b/charts/app/templates/serviceaccount.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "appa.serviceAccountName" . }}
+  name: {{ template "app.serviceAccountName" . }}
   labels:
-{{ include "appa.labels" . | indent 4 }}
+{{ include "app.labels" . | indent 4 }}
 {{- end -}}
