--- a/charts/app/templates/service.yaml
+++ b/charts/app/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "appa.fullname" . }}
+  name: {{ include "app.fullname" . }}
   labels:
-{{ include "appa.labels" . | indent 4 }}
+{{ include "app.labels" . | indent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,5 +12,5 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: {{ include "appa.name" . }}
+    app.kubernetes.io/name: {{ include "app.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
