--- a/charts/app/Chart.yaml
+++ b/charts/app/Chart.yaml
@@ -1,5 +1,5 @@
-apiVersion: v1
-appVersion: "1.0"
+apiVersion: v1 #helm 2
+appVersion: "0.1"
 description: A Helm chart for Kubernetes
 name: app
 version: 0.3.0
