--- a/charts/app/Chart.yaml
+++ b/charts/app/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1 #helm v2
 appVersion: "0.1"
-description: A Helm chart for Kubernetes
+description: A Helm chart for Kubernetes sample python echo server and demonstration purposes
 name: app
 version: 0.3.0
